--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "0.9.5"
   },
   "dependencies": {
+    "axios": "^0.16.0",
     "react": "^15.5.3",
     "react-dom": "^15.5.3",
     "react-router": "^4.0.0",
