--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "axios": "^0.16.0",
     "material-ui": "^0.17.1",
+    "moment": "^2.18.1",
     "react": "^15.5.3",
     "react-dom": "^15.5.3",
     "react-router": "^4.0.0",
