--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -2,3 +2,6 @@
   instagram:
     every: 20s   # Runs once per minute
     class: InstagramWorker
+  twitter:
+    every: 5s   # Runs once per minute
+    class: TwitterWorker
