added deploy option to gh-pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "hack-the-world",
+  "homepage": "https://hdf1986.github.io/hack-the-world",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
@@ -19,6 +20,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && gh-pages -d dist"
   }
 }
